--- a/Relatorio-Dados.Rmd
+++ b/Relatorio-Dados.Rmd
@@ -63,7 +63,7 @@ knitr::opts_chunk$set(
 
 No contexto de pacientes que desenvolvem câncer, é de suma importância, para se decidir qual tratamento utilizar, saber se o câncer já se espalhou para os linfonodos próximos. Tal condição é denominada envolvimento nodal. Tendo isso em vista, foi feito um estudo com coleta de variáveis pré-operatórias de pacientes com câncer de próstata, assim como se desenvolveram ou não o quadro de envolvimento nodal. 
 
-Desta forma, o presente estudo busca elucidar quais fatores impactam na probabilidade de um determinado paciente, que desenvolveu câncer de próstata, não ter envolvimento nodal, assim como possibilitar a predição em futuros pacientes. Para entender quais variáveis são importantes para a predição e de que forma elas estão relacionadas, será feito um estudo exploratório, seguido de uma análise inferencial por meio de modelos de regressão logística.
+Desta forma, o presente estudo busca elucidar quais fatores impactam na probabilidade de um determinado paciente, que desenvolveu câncer de próstata, ter envolvimento nodal, assim como possibilitar a predição do quadro de envolvimento nodal em futuros pacientes. Para entender quais variáveis são importantes para a predição e de que forma elas estão relacionadas, será feito um estudo exploratório, seguido de uma análise inferencial por meio de modelos de regressão logística.
 
 \newpage
 
@@ -85,6 +85,7 @@ Com o intuito de apresentar e compreender as variáveis presentes na amostra, se
 # Carregar os dados
 library(readxl)
 library(tidyverse)
+library(magrittr)
 setwd(getwd())
 
 amostra <- read_xlsx(path="Amostra_g06.xlsx",
@@ -103,7 +104,7 @@ tema <- theme_bw()+
         axis.text = element_text(colour = "black", size=14),
         panel.border = element_blank(),
         axis.line = element_line(colour = "black"),
-        plot.title = element_text(hjust = 0.5, size=12),
+        plot.title = element_text(hjust = 0.5, size=18),
         legend.position = "bottom",
         legend.text=element_text(size=18))
 
@@ -364,10 +365,6 @@ log_simples <- glm(X4 ~ X3, family=binomial, data=treinamento)
 summary(log_simples)
 ```
 
-```{r}
-confint(log_simples) # profile likelihood confidence interval
-```
-
 
 O modelo de regressão logística ajustado para a probabilidade $\pi(x)$ do paciente *não* apresentar envolvimento nodal em câncer de próstata é descrito a seguir.
 
@@ -436,9 +433,10 @@ hoslem_test_resultado
 O p-valor indica que existem evidências para rejeitar a hipótese de ajuste do modelo a um nível de significância $\alpha=5\%$.
 
 ### 3.2.2 Regressão Logística Múltipla
+
 <!-- Regressão Logística Múltipla -->
 
-Na segunda etapa do estudo considera-se, além da variável nível de fosfatase ácida, as outras variáveis pré-operatórias e suas interações. Assim, para a seleção das variáveis do modelo considera-se os critérios AIC e BIC, combinando os métodos stepwise "Forward selection" e "Backward elimination".
+Na segunda etapa do estudo considera-se, além da variável nível de fosfatase ácida, as outras variáveis pré-operatórias e suas interações. Neste sentido, para a seleção das variáveis do modelo considera-se os critérios AIC e BIC, combinando os métodos stepwise "Forward selection" e "Backward elimination".
 
 ```{r}
 log_multipla <- glm(X4 ~ X3 + factor(X1) + factor(X2) + X3*factor(X1) + X3*factor(X2) + factor(X1)*factor(X2) +  X3*factor(X1)*factor(X2), family=binomial, data=treinamento)
@@ -449,17 +447,13 @@ library(MASS)
 log_multipla_AIC <- log_multipla %>% stepAIC(trace = F, direction="both")
 ```
 
-<!-- PRECISO DE ALGUM STEPAIC CORRIGIDO QUE TEM PRINT DOS STEPSSSSS, PORQUE ESSE AIC CANALHA PARA NO MINIMO LOCAL -->
-
 ```{r}
 library(magrittr)
 formatar_explicativas_modelo = function(formula) {
   formula %>%
       {as.character(.)[3]} %>%
       str_remove_all("factor\\(|\\)") %>%
-      str_replace_all(":", '*') %>%
-    str_replace_all(" \\* ","*")%>%
-    str_replace_all(" \\+ ","+")
+      str_replace_all(":", '*')
 }
 log_multipla_BIC_nula = glm(X4~., family=binomial, data=treinamento)
 
@@ -467,28 +461,28 @@ ajustes_modelos <- log_multipla_BIC_nula %$% tibble(
   Modelo = 0,
   "Fórmula" = "Null",
   Deviance = null.deviance,
-  "g.l." = df.null,
+  "g.l." = "",
   BIC = BIC(.),
   AIC = aic,
-  "Diferença Deviance" = ""
+  "P-valor" = "",
 )
 for (step in 0:4) {
   log_multipla_BIC <- log_multipla %>% stepAIC(
-    trace = T, direction="both", k=log(51), step=step
+    trace = F, direction="both", k=log(51), step=step
   )
     
   ajustes_modelos %<>% bind_rows(log_multipla_BIC %$% tibble(
     Modelo = step+1,
     "Fórmula" = formatar_explicativas_modelo(formula),
     Deviance = deviance,
-    "g.l." = df.residual,
+    "g.l." = (df.null - df.residual) %>% as.character,
     AIC = aic,
     BIC = BIC(.),
-    "Diferença Deviance" = str_c(
-      abs(null.deviance - deviance) %>% round(2),
-      " (df = ", df.null - df.residual,")"
-    )
-  ))
+    "P-valor" = ifelse(1 - pchisq((null.deviance - deviance), (df.null - df.residual)) < 0.001,
+                                "< 0.001",
+                                round(pvalor, 3)),
+  )
+)
 }
 log_multipla_BIC_mais_simples <- glm(X4 ~ factor(X1) + factor(X2),
                                      family=binomial,
@@ -498,38 +492,23 @@ ajustes_modelos %<>% bind_rows(
     Modelo = step+1,
     "Fórmula" = formatar_explicativas_modelo(formula),
     Deviance = deviance,
-    "g.l." = df.residual,
+    "g.l." = (df.null - df.residual) %>% as.character,
     AIC = aic,
     BIC = BIC(.),
-    "Diferença Deviance" = str_c(
-      abs(null.deviance - deviance) %>% round(2),
-      " (df = ", df.null - df.residual,")"
-    )
+    "P-valor" = ifelse(1 - pchisq((null.deviance - deviance), (df.null - df.residual)) < 0.001,
+                                "< 0.001",
+                                round(pvalor, 3)),
   )
 )
-ajustes_modelos$Modelo <- 0:6
 ajustes_modelos %>%
-  kableExtra::kbl(digits=2,align=c('l','l','l','l','l','l','l'),booktabs = T,
+  kableExtra::kbl(digits=2,align=c('l','l','c'),booktabs = T,
                   caption = 'Medidas de ajuste dos modelos') %>% 
-  kableExtra::kable_classic(full_width=F,latex_options = "HOLD_position")
+  kableExtra::kable_classic(full_width=FALSE,latex_options = "HOLD_position")
 ```
 
+Os métodos de seleção automática de variáveis, AIC e BIC, identificaram o modelo 5 como mais adequado. O resto dos modelos foram apresentados para facilitar a comparação e justificar a seleção dos 3 modelos candidatos. O modelo 6, que tem o menor número de parâmetros e que apresentou valores ligeriamente superiores de AIC e BIC quando comparado com o modelo 5, foi considerado pelo critério da interpretabilidade.
 
-```{r}
-#library(aicplot)
-library(locfit)
-plot(aicplot(log_multipla_AIC,alpha=seq(0.2,1.0,by=0.05)))
-
-plot(aicplot(log_multipla_BIC,alpha=seq(0.2,1.0,by=0.05)))
-```
-
-
-O modelo final selecionado pelo BIC considera as 3 variáveis sem interações, com forte penalização dos modelos com muitos parâmetros. No entanto, observe como os resultados do AIC e do BIC para o modelo com duas variáveis (resultado da radiografia e estágio do tumor) também apresenta valores relativamente baixos, de 49.73 e 55.53, respectivamente.
-
-
-<!-- FALTA justificar escolha dos dois modelos -->
-
-Assim, considera-se a interpretabilidade como outro fator importante para seleção dos modelos candidatos. Os modelos ajustados são descritos a seguir.
+Como todos os modelos são signifcativos para o teste de ausência de regressão, então selecionamos os dois que tiveram melhor desempenho para o AIC e o BIC (modelo 4 e 5). Além disso, considera-se a interpretabilidade como outro fator importante para seleção dos modelos e, portanto, o modelo 6 também é separado como candidato. Assim, Os modelos ajustados são descritos a seguir.
 
 $$\text{logito}[\hat{\pi}(x)] = -4.59733 + 0.02462x_1 - 2.96608x_2 + 2.89812x_3 + 0.08951x_1x_2$$
 
@@ -545,52 +524,17 @@ modelo_final_complexo <- glm(X4 ~ X3 + factor(X1) + factor(X2), family=binomial,
 modelo_final_simples <- glm(X4 ~ factor(X1) + factor(X2), family=binomial, data=treinamento)
 ```
 
-<!-- Testando deviance para modelo mais complexo -->
-
-```{r}
-list(modelo_final_mais_complexo, modelo_final_complexo, modelo_final_simples) %>%
-  map_df(function(modelo) {
-    modelo %$% tibble(
-      Modelo                 = formatar_explicativas_modelo(formula),
-      "Estatística do teste" = (est = null.deviance - deviance),
-      "g.l."                 = (df = df.null - df.residual),
-      "p-valor"              = ifelse(
-        (pvalor = 1 - pchisq(est, df)) < 0.001,
-        "< 0.001",
-        round(pvalor, 3)
-      )
-    )
-  }) %>%
-  kableExtra::kbl(
-    digits=2,align=c('l','l','c'),booktabs = T,
-    caption = 'Teste de ausência de regressão para cada modelo'
-  ) %>% 
-  kableExtra::kable_classic(full_width=FALSE,latex_options = "HOLD_position")
-
-```
-
-<!-- Testando deviance para modelo complexo -->
-
-```{r}
-1 - pchisq(modelo_final_complexo$null.deviance - modelo_final_complexo$deviance, length(coef(modelo_final_complexo)))
-```
-
-<!-- Testando deviance para modelo mais simples -->
-
-Dado que o modelo mais complexo se ajusta, deseja-se testar que o modelo mais simples se ajusta.
-
-```{r}
-1 - pchisq(modelo_final_simples$null.deviance - modelo_final_simples$deviance, length(coef(modelo_final_simples)))
-```
-
 <!-- TESTE DE AJUSTAMENTO -->
 
-```{r}
-# teste para modelo mais simples
-1 - pchisq(modelo_final_simples$deviance, modelo_final_simples$df.residual)
-```
+A continuação calculamos os testes de ajuste do modelo. Note que, para o modelo com variável quantitativa contínua utilizamos o teste de Hosmer-Lemeshow.
+
+O teste indica que existem evidências de ajustamento para os modelos de 3 e 4 parâmetros (p-valor de 0.7014 e 0.6480, respectivamente). Por outro lado, para o modelo mais complexo observamos pior desempenho no ajuste (pvalor = 0.106).
+
+A continuação apresentamos as tabelas para os valores observados e esperados considerados no teste de Hosmer-Lemeshow.
 
 ```{r}
+library(ResourceSelection)
+
 # teste para modelo mais complexo (com variável continua)
 hoslem_test_resultado <- hoslem.test(modelo_final_mais_complexo$y, fitted(modelo_final_mais_complexo), g=10)
 
@@ -605,9 +549,9 @@ hl_df %>%
 ```
 
 
-```{r}
-hoslem_test_resultado
-```
+# ```{r}
+# hoslem_test_resultado$p.value
+# ```
 
 
 ```{r}
@@ -625,207 +569,146 @@ hl_df %>%
 ```
 
 
+<!-- COMENTAR Matriz de confusão -->
+
+O desempenho do poder preditivo é analisado a partir da acurácia dos modelos e o gráfico de curvas ROC, considerando banco de validação. O limite de decisão definido é de 0.5.
+
 ```{r}
-hoslem_test_resultado
+tabela_acuracia <- tibble(modelo = rep(NA,3), acuracia = rep(NA,3))
+
+probabs_preditas <- list(predict(modelo_final_mais_complexo, newdata = validacao,type = "response"),
+                         predict(modelo_final_complexo, newdata = validacao,type = "response"),
+                         predict(modelo_final_simples, newdata = validacao,type = "response"))
+
+
+modelos <- c(formatar_explicativas_modelo(modelo_final_mais_complexo$formula),
+             formatar_explicativas_modelo(modelo_final_complexo$formula),
+             formatar_explicativas_modelo(modelo_final_simples$formula))
+
+validacao$X4 <- as.factor(validacao$X4)
+
+for(i in 1:3){
+
+truth_predicted <- data.frame(
+  obs = validacao$X4,
+  pred = factor(as.vector(ifelse(probabs_preditas[[i]] > .5, 1, 0)))
+)
+
+tabela_acuracia$modelo[i] <- modelos[i]
+tabela_acuracia$acuracia[i] <-confusionMatrix(truth_predicted$pred, validacao$X4)$overall[1]
+}
+
+tabela_acuracia %>% 
+  kableExtra::kbl(.,digits=2,align=c('l','c'),booktabs = T,
+                  caption = 'Acurácia observada nos modelos candidatos',
+                  col.names = c("Modelo","Acurácia")) %>% 
+  kableExtra::kable_classic(full_width=FALSE,latex_options = "HOLD_position")
 ```
 
 
-<!-- COMENTAR Matriz de confusão -->
-
-Observe as matrizes de confusão com o limite de decisão definido em 0.5. (CONFERIR SE É PRA FAZER COM O TREINAMENTO OU VALIDAÇÃO, eu acho que é com validação).
 
 ```{r}
-library(caret)
-library(yardstick)
-validacao$X4 <- as.factor(validacao$X4)
-probabs_preditas <- predict(
-  modelo_final_mais_complexo,
-  newdata = validacao,
-  type = "response"
-)
+library(pROC)
+
+invisible(plot(roc(validacao$X4,
+                   predict(modelo_final_mais_complexo, newdata = validacao,type = "response")),
+               print.auc = T,
+               col = "red", 
+               main = "Curvas ROC"))
+
+invisible(plot(roc(validacao$X4,
+                   predict(modelo_final_complexo, newdata = validacao,type = "response")),
+               col = "orange", 
+               add = T))
+
+invisible(plot(roc(validacao$X4,
+                   predict(modelo_final_simples, newdata = validacao,type = "response")),
+               col = "blue", 
+               add = T))
+```
+
+<!-- O modelo mais complexo é superior (AUC é maior) COMENTAR  -->
+
+Para um valor particular de especificidade, o melhor poder preditivo corresponde a uma maior sensibilidade, isto significa, quanto maior a área melhor o poder preditivo. Assim, o modelo com 4 parâmetros apresenta o melhor desempenho se considerarmos o AUC de 0.84, seguido do modelo com uma interação e por último o modelo de 3 parâmetros.
+
+Os resultados observados na curva ROC são condizentes com a tabela de valores da acurácia para cada modelo.
+
+<!-- ANALISE DE RESIDUOS PADRONIZADOS -->
+
+```{r}
+res_padronizado_1 <- tibble(index=seq(1,51), residuos=rstandard(modelo_final_mais_complexo, type='deviance')) %>%
+  ggplot(aes(x=index, y=residuos)) +
+  geom_point() +
+  labs(title="modelo_final_mais_complexo")+
+  geom_hline(yintercept = 0, color="orange") +
+  tema
+```
+
+
+```{r}
+res_padronizado_2 <- tibble(index=seq(1,51), residuos=rstandard(modelo_final_complexo, type='deviance')) %>%
+  ggplot(aes(x=index, y=residuos)) +
+  labs(title="modelo_final_complexo")+
+  geom_point() +
+  geom_hline(yintercept = 0, color="orange") +
+  tema
+```
+
+
+```{r}
+res_padronizado_3 <- tibble(index=seq(1,51), residuos=rstandard(modelo_final_simples, type='deviance')) %>%
+  ggplot(aes(x=index, y=residuos)) +
+  geom_point() +
+  labs(title="modelo_final_simples")+
+  geom_hline(yintercept = 0, color="orange") +
+  tema
+
+
+library(cowplot)
+cowplot::plot_grid(res_padronizado_1,res_padronizado_2,
+                   res_padronizado_3,nrow=2)
+```
+
+<!-- Residuos vs valores ajustados -->
+
+
+### 3.2.3 Modelo final
+
+```{r}
+# formula = X4 ~ X3 + factor(X1) + factor(X2)
+
+modelo_no_banco_completo <- glm(X4 ~ X3 + factor(X1) + factor(X2), family=binomial, data=amostra)
+
+summary(modelo_no_banco_completo)
+```
+
+
+**(Comentar a interpretação dos parâmetros do modelo)**
+
+
+```{r}
+# matriz de confusao e acuracia
+probabs_preditas <- predict(modelo_no_banco_completo, newdata = amostra,type = "response")
 
 truth_predicted<-data.frame(
-  obs = validacao$X4,
+  obs = as.factor(amostra$X4),
   pred = factor(as.vector(ifelse(probabs_preditas > .5, 1, 0)))
 )
 
 conf_mat(truth_predicted, obs, pred) %>% autoplot(type = "heatmap") +
   scale_fill_gradient(low="#D6EAF8",high = "#2E86C1")
 
-#confusionMatrix(factor(as.vector(ifelse(fitted(modelo_final_mais_complexo) > .5, 1, 0))), factor(treinamento$X4))$table
-
-confusionMatrix(truth_predicted$pred, validacao$X4)$overall[1]
 ```
 
 ```{r}
-confusionMatrix(factor(as.vector(ifelse(fitted(modelo_final_complexo) > .5, 1, 0))), factor(treinamento$X4))$table
-
-confusionMatrix(factor(as.vector(ifelse(fitted(modelo_final_complexo) > .5, 1, 0))), factor(treinamento$X4))$overall[1]
+confusionMatrix(truth_predicted$pred, as.factor(amostra$X4))$overall[1]
 ```
 
-```{r}
-confusionMatrix(factor(as.vector(ifelse(fitted(modelo_final_simples) > .5, 1, 0))), factor(treinamento$X4))$table
-
-confusionMatrix(factor(as.vector(ifelse(fitted(modelo_final_simples) > .5, 1, 0))), factor(treinamento$X4))$overall[1]
-```
-
-
-```{r}
-library(pROC)
-
-cowplot::plot_grid(
-  ggroc(roc(treinamento$X4, fitted(modelo_final_mais_complexo)), colour='red') +
-    geom_abline(intercept = 1, slope=1, alpha=.3) +
-    tema,
-  ggroc(roc(treinamento$X4, fitted(modelo_final_complexo)), colour='red') +
-    geom_abline(intercept = 1, slope=1, alpha=.3) +
-    tema,
-  ggroc(roc(treinamento$X4, fitted(modelo_final_simples)), colour='red') +
-    geom_abline(intercept = 1, slope=1, alpha=.3) +
-    tema
-)
-```
-
-<!-- O modelo mais complexo é superior (AUC é maior) COMENTAR  -->
-
-
-<!-- ANALISE DE RESIDUOS PADRONIZADOS -->
-
-```{r}
-res_padronizado_1 <- tibble(
-  index=seq(1,51),
-  residuos=rstandard(modelo_final_mais_complexo, type='deviance')
-) %>%
-  ggplot(aes(x=index, y=residuos)) +
-  geom_point() +
-  labs(title="Modelo de 4 parâmetros e 1 interação ")+
-  geom_hline(yintercept = 0, color="orange") +
-  tema
-
-res_padronizado_2 <- tibble(
-  index=seq(1,51),
-  residuos=rstandard(modelo_final_complexo, type='deviance')
-) %>%
-  ggplot(aes(x=index, y=residuos)) +
-  labs(title="Modelo de três parâmetros")+
-  geom_point() +
-  geom_hline(yintercept = 0, color="orange") +
-  tema
-
-res_padronizado_3 <- tibble(
-  index=seq(1,51),
-  residuos=rstandard(modelo_final_simples, type='deviance')
-) %>%
-  ggplot(aes(x=index, y=residuos)) +
-  geom_point() +
-  labs(title="Modelo de dois parâmetros") +
-  geom_hline(yintercept = 0, color="orange") +
-  tema
-
-
-library(cowplot)
-cowplot::plot_grid(res_padronizado_1,res_padronizado_2,res_padronizado_3,nrow=2)
-```
-
-Observamos dos gráficos que o comportamento dos resíduos é bastante estável em todos os modelos. Não existem outliers drasticamente distantes do eixo 0, estando a maioria concentrados entre -1 e 1 e poucos para além de -2 e 2, especialmente nos modelos de dois e três parâmetros.
-
-
-### 3.2.3 Modelo final
-
-Tendo em vista os valores de acurácia no banco de validação, o gráfico da curva ROC e o critério de parcimônia, ficou clara a escolha pelo modelo com todas as variáveis, sem interações. Tal modelo será ajustado no banco de dados completo, a seguir.
-
-```{r}
-# formula = X4 ~ X3 + factor(X1) + factor(X2)
-modelo_no_banco_completo <- glm(X4 ~ X3 + factor(X1) + factor(X2), family=binomial, data=amostra)
-
-summary(modelo_no_banco_completo)
-```
-
-É possível observar, pela saída do modelo final, que rejeitamos a hipótese nula de que os parâmetros do modelo são nulos, para todas as variáveis selecionadas, levando em consideração os baixos p-valores obtidos no teste Z e o nível de significância adotado ($\alpha=5\%$). A interpretação dos coeficientes estimados pode ser vista por meio da tabela abaixo.
-
-
-```{r}
-# Intevalos para os parametros (95%)
-
-z <- qnorm(0.975)
-b1 <- modelo_no_banco_completo$coefficients[3]
-b2 <- modelo_no_banco_completo$coefficients[4]
-b3<- modelo_no_banco_completo$coefficients[2]
-ASE1 <- summary(modelo_no_banco_completo)$coefficients[3,2]
-ASE2 <- summary(modelo_no_banco_completo)$coefficients[4,2]
-ASE3 <- summary(modelo_no_banco_completo)$coefficients[2,2] 
-# b1
-b1_ic <- c(b1-z*ASE1,b1+z*ASE1)
-b1_ic_string <- paste("[",round(b1_ic[1],2),",",round(b1_ic[2],2),"]")
-# b2
-b2_ic <- c(b2-z*ASE2,b2+z*ASE2)
-b2_ic_string <- paste("[",round(b2_ic[1],2),",",round(b2_ic[2],2),"]")
-
-# b3
-b3_ic <- c(b3-z*ASE3,b3+z*ASE3)
-b3_ic_string <- paste("[",round(b3_ic[1],2),",",round(b3_ic[2],2),"]")
-
-
-# Intervalos para odds
-
-odds_b1 <- exp(b1_ic)
-odds_b1_string <- paste("[",round(odds_b1[1],2),",",round(odds_b1[2],2),"]")
-odds_b2 <- exp(b2_ic)
-odds_b2_string <- paste("[",round(odds_b2[1],2),",",round(odds_b2[2],2),"]")
-odds_b3 <- exp(b3_ic)
-odds_b3_string <- paste("[",round(odds_b3[1],2),",",round(odds_b3[2],2),"]")
-
-tbl_intervalos_betas_odds <- data.frame("Coeficiente"=c("Beta 1","Beta 2","Beta 3"),
-                                        "Intervalo do coeficiente"=c(b1_ic_string,
-                                                                     b2_ic_string,
-                                                                     b3_ic_string),
-                                        "Odds"=c(exp(b1),exp(b2),exp(b3)),
-                                        "Intervalo da Odds"=c(odds_b1_string,
-                                                              odds_b2_string,
-                                                              odds_b3_string),
-                                        check.names = F)
-rownames(tbl_intervalos_betas_odds)<-NULL
-tbl_intervalos_betas_odds %>% 
-  kableExtra::kbl(.,digits=3,align=c('l','c','c','c'),booktabs = T,
-                  caption = 'Intervalos de confiança (95\\%) para o modelo final') %>% 
-  kableExtra::kable_classic(full_width=FALSE,latex_options = "HOLD_position")
-```
-
-O coeficiente $\hat{\beta_1}$, que acompanha a variável resultado da radiografia, indica que, mantendo todo o restante constante, o resultado positivo representa de 3,67 até 65,7 vezes a chance de **não** ter envolvimento nodal, em comparação com o resultado negativo. Já o coeficiente $\hat{\beta_2}$, que acompanha a variável estágio do tumor, indica que, dado todo o restante constante, o estágio de tumor mais grave representa de 5,64 até 108,5 vezes a chance de **não** ter o quadro de envolvimento nodal, em comparação com o estágio de tumor menos grave. Por fim, o parâmetro $\hat{\beta_3}$, referente ao nível de fosfatase ácida, revela que o incremento de 1 unidade (na escala x100) na fosfatase acarreta em um aumento multiplicativo na chance de **não** ter envolvimento nodal de 1,01 até 1,05, isto é, de 1% até 5%.
 
 \newpage
 
 # 4. Conclusão
 
-O presente estudo propôs identificar fatores que acarretam no envolvimento nodal de pacientes com câncer de próstata, e nas relações desses fatores com a probabilidade de não apresentar envolvimento. Desse modo, as análises exploratórias indicaram que todas as variáveis, resultado da radiografia, estágio do tumor e nível de fosfatase ácida apresentavam algum tipo de relação com a variável resposta. Seguindo para a modelagem, a regressão logística simples (apenas com a fosfatase ácida) se mostrou insatisfatória, não sendo capaz de explicar com êxito o envolvimento nodal dos indivíduos.
-
-Desta forma, foi aplicado o procedimento de regressão logística múltipla, onde todas as variáveis da amostra foram consideradas. A etapa de escolha das variáveis indicou o modelo com todos os fatores (simples, sem interações) como sendo o mais pertinente, dado os valores de AIC, testes de ajustamento, curva ROC e valores de acurácia obtidos por meio da partição do banco que foi destinada para validação. Assim, o modelo escolhido apresentou resultados satisfatórios, e podemos dizer que é capaz de predizer a não ocorrência de envolvimento nodal, dado as variáveis pré-operatorias, com um erro razoável. Certamente o erro de predição poderia ser atenuado por meio de novos estudos, com maior número de indivíduos amostrados e coleta de novas variáveis.
-
-De modo geral, o resultado da radiografia negativo impactou positivamente na probabilidade de haver envolvimento nodal, assim como o estágio de tumor menos grave também parece gerar impacto significativo no aumento dessa probabilidade. Em relação ao nível de fosfatase ácida, apesar de ser maior, em média, em pacientes sem envolvimento nodal, os valores discrepantes presentes no grupo que possui envolvimento nodal podem ter repercurtido e afetado o modelo final. De todo modo, o aumento de uma unidade no nível de fosfatase indicou um aumento multiplicativo na chance de não ter envolvimento nodal de até 5%.
-
-Por fim, segue o gráfico das curvas do modelo ajustado para cada combinação das variáveis categóricas (estágio do tumor e resultado da radiografia):
-```{r}
-pontos_x3 = seq(from=0, to=max(amostra$X3), by=0.01)
-B0 = modelo_final_complexo$coefficients[1]
-B1_X3 = modelo_final_complexo$coefficients[2]
-B2_X1 = modelo_final_complexo$coefficients[3]
-B3_X2 = modelo_final_complexo$coefficients[4]
-
-map_df(0:1, function(x1_dummy) {
-  map_df(0:1, function(x2_dummy) {
-    tibble(
-      x1=x1_dummy,
-      x2=x2_dummy,
-      grupo=str_c("(X1=",x1,", X2=",x2, ")"),
-      x3=pontos_x3,
-      logito=B0 + B1_X3*x3 + B2_X1*x1 + B3_X2*x2,
-      prob=exp(logito)/(1 + exp(logito)),
-    )
-  })
-}) %>%
-  ggplot() +
-  geom_path(aes(x=x3, y=prob, color=grupo, group=grupo))
-```
 \newpage
 
 # 5. Apêndice
